@@ -1,5 +1,5 @@
 /*
- *   $Id: defaults.h,v 1.14 2005/09/28 10:55:29 psavola Exp $
+ *   $Id: defaults.h,v 1.15 2005/10/18 19:17:29 lutchann Exp $
  *
  *   Authors:
  *    Lars Fenneberg		<lf@elemental.net>	 
@@ -9,7 +9,7 @@
  *
  *   The license which is distributed with this software in the file COPYRIGHT
  *   applies to this software. If your distribution is missing this file, you
- *   may request it from <lutchann@litech.org>.
+ *   may request it from <pekkas@netcore.fi>.
  *
  */
 
