@@ -1,5 +1,5 @@
 .\"
-.\"   $Id: radvd.8.man,v 1.10 2005/07/26 19:21:04 psavola Exp $
+.\"   $Id: radvd.8.man,v 1.11 2005/10/18 19:17:29 lutchann Exp $
 .\"
 .\"   Authors:
 .\"    Lars Fenneberg		<lf@elemental.net>	 
@@ -9,7 +9,7 @@
 .\"
 .\"   The license which is distributed with this software in the file COPYRIGHT
 .\"   applies to this software. If your distribution is missing this file, you
-.\"   may request it from <lutchann@litech.org>.
+.\"   may request it from <pekkas@netcore.fi>.
 .\"
 .\"
 .\"
@@ -155,8 +155,7 @@ to point to a file in a
 .SH BUGS
 
 There certainly are some bugs. If you find them or have other
-suggestions please contact Nathan Lutchansky <lutchann@litech.org> or
-Pekka Savola <pekkas@netcore.fi>.
+suggestions please contact Pekka Savola <pekkas@netcore.fi>.
 
 .SH "SEE ALSO"
 
@@ -167,8 +166,8 @@ Pekka Savola <pekkas@netcore.fi>.
 .nf
 Pedro Roque	<roque@di.fc.ul.pt>	- wrote first version for Linux
 Lars Fenneberg	<lf@elemental.net>	- previous maintainer
+Nathan Lutchansky	<lutchann@litech.org>	- previous maintainer
 Pekka Savola	<pekkas@netcore.fi>	- current maintainer
-Nathan Lutchansky	<lutchann@litech.org>	- current maintainer
 Craig Metz	<cmetz@inner.net>	- port to NRL's IPv6 code for BSD4.4
 Marko Myllynen	<myllynen@lut.fi>	- RFC 2461 update, Mobile IPv6 support
 .fi
