@@ -1,4 +1,6 @@
-$Id: CHANGES,v 1.47 2005/10/18 06:52:33 psavola Exp $
+$Id: CHANGES,v 1.48 2005/10/18 19:17:29 lutchann Exp $
+
+10/18/2005	Transfer sole maintainership of radvd to Pekka Savola.
 
 10/18/2005	Make the radvd.conf syntax dump default
 		in radvdump and remove the previous default to
